--- a/Notebooks/Feature Engineering_Extractions.ipynb
+++ b/Notebooks/Feature Engineering_Extractions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3fed6348",
+   "id": "c33b86b8",
    "metadata": {},
    "source": [
     "# 5. Analyze & Share phase\n",
@@ -12,15 +12,15 @@
     "\n",
     "1. Correlation\n",
     "2. Extra Trees Regressor\n",
-    "3. Linear Regression\n",
-    "4. Lasso\n",
-    "3. RFECV"
+    "3. RFECV\n",
+    "4. Linear Regression\n",
+    "5. Lasso (L1 reg)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2f6fd9e2",
+   "id": "936b32ca",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8f52701",
+   "id": "47ab1a96",
    "metadata": {},
    "source": [
     "### 5.1.2 Extra Trees Regressor (feature_importance_)"
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6297483",
+   "id": "be33f4a5",
    "metadata": {},
    "source": [
     "**workin with all the numerical values**"
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "35dd1007",
+   "id": "13b40fe5",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c639f5d0",
+   "id": "1a70d6ec",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "74ff155e",
+   "id": "b508ea21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "198080d5",
+   "id": "8db16cd0",
    "metadata": {
     "scrolled": true
    },
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8f38d365",
+   "id": "8fed4abd",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f833bd9f",
+   "id": "7cdad659",
    "metadata": {},
    "source": [
     "### 5.1.3 RFECV\n"
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bb00ca01",
+   "id": "c3642cda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c9ebcdc3",
+   "id": "ce6fec61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "789a8185",
+   "id": "0aa0cc9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1b5f968",
+   "id": "1acfab3e",
    "metadata": {},
    "source": [
     "## 5.2 Ensembling(Random Forest Regressor)\n"
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "718bb8a3",
+   "id": "9f21d5d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "54e076c2",
+   "id": "203dc449",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c66b3de6",
+   "id": "c48c007f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "27b3fa42",
+   "id": "c5ef269a",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f3b02cf",
+   "id": "187fcf69",
    "metadata": {},
    "outputs": [],
    "source": []
