--- a/Notebooks/ML_model building.ipynb
+++ b/Notebooks/ML_model building.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "662b4e55",
+   "id": "fa22308a",
    "metadata": {},
    "source": [
     "# 5. Analyze & Share phase\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9745d0e2",
+   "id": "0a117bfc",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6594d8fd",
+   "id": "67e6fd2d",
    "metadata": {},
    "source": [
     "### 5.1.2 Extra Trees Regressor (feature_importance_)"
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba00def",
+   "id": "6ed7becc",
    "metadata": {},
    "source": [
     "**workin with all the numerical values**"
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "efb4ef72",
+   "id": "0395614e",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "90654ab9",
+   "id": "d6fea635",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1300b91e",
+   "id": "0c8c23e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c61b7019",
+   "id": "ab71141b",
    "metadata": {
     "scrolled": true
    },
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e42dbc94",
+   "id": "9871b34d",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0b222e1",
+   "id": "7f3bb567",
    "metadata": {},
    "source": [
     "### 5.1.3 RFECV\n"
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "56bfc40e",
+   "id": "ec947393",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1af1e318",
+   "id": "ff6aa6d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e9fdc561",
+   "id": "6c520599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6857d751",
+   "id": "835675a6",
    "metadata": {},
    "source": [
     "## 5.2 Ensembling(Random Forest Regressor)\n"
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "fa030e02",
+   "id": "56cd0465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cc068cac",
+   "id": "29905816",
    "metadata": {
     "scrolled": true
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c660545a",
+   "id": "40e7e108",
    "metadata": {},
    "source": [
     "Here, the training score is too high which means **Overfitting**, so we will go with Linear and lasso"
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "56030c12",
+   "id": "27a73dc3",
    "metadata": {},
    "outputs": [
     {
@@ -751,14 +751,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c47707bc",
+   "metadata": {},
+   "source": [
+    "## 4. Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8866bf54",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 60766321.23235924\n",
+      "Root Mean Squared Error: 7795.275571290552\n",
+      "R-squared: -2.097895312837349\n",
+      "Coefficients: [-8.31232048e+02  5.05410694e+03 -2.87867399e+00  3.36078732e+02\n",
+      "  1.00242367e+01  1.36903702e+03 -3.12754903e+03  5.22394990e+02\n",
+      "  1.32372834e+03  5.20095000e+03 -2.37840186e+04  1.22403061e+02\n",
+      " -2.13093700e+02 -1.52783839e+02  1.45403613e+03  1.58390963e+02\n",
+      " -1.09704896e+00 -3.41122086e-01  2.15781714e+00  4.53363648e-04\n",
+      "  1.34366654e+04 -3.80939192e+03 -9.42358310e+04  6.69783448e+03\n",
+      "  2.82265949e+00  4.11713311e+03]\n",
+      "Intercept: -6826.950563976306\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "X = num_df.drop(columns=['shares'])  # Features (excluding 'shares')\n",
+    "y = num_df['shares']  # Target variable\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize the Linear Regression model\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# Fit the model to the training data\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = mse**0.5\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Mean Squared Error: {mse}\")\n",
+    "print(f\"Root Mean Squared Error: {rmse}\")\n",
+    "print(f\"R-squared: {r2}\")\n",
+    "\n",
+    "# Coefficients and intercept\n",
+    "coefficients = model.coef_\n",
+    "intercept = model.intercept_\n",
+    "\n",
+    "print(\"Coefficients:\", coefficients)\n",
+    "print(\"Intercept:\", intercept)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f6938cb",
+   "metadata": {},
+   "source": [
+    "Again, the r-score is bad and wil be underfitting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d8e689f",
+   "metadata": {},
+   "source": [
+    "## 5. Lasso Regression "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f1444ce4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 60128572.669605605\n",
+      "Root Mean Squared Error: 7754.261581195569\n",
+      "R-squared: -2.0653825945543285\n",
+      "Coefficients: [-8.07895425e+02  4.19822975e+03 -2.23517708e+00  3.33366991e+02\n",
+      "  1.00097601e+01  1.35572532e+03 -3.08842177e+03  5.28658272e+02\n",
+      "  1.26981566e+03  5.17608451e+03 -2.34719619e+04  1.23378956e+02\n",
+      " -2.11190662e+02 -1.51909676e+02  1.43066878e+03  1.59582578e+02\n",
+      " -1.09651827e+00 -3.40166847e-01  2.15180650e+00  5.19050116e-04\n",
+      "  1.30385841e+04 -4.89175072e+03 -8.47771512e+04  0.00000000e+00\n",
+      "  0.00000000e+00  4.05817557e+03]\n",
+      "Intercept: -6810.8342304389125\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import numpy as np\n",
+    "\n",
+    "# Assuming you have your features in X and target variable in y\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create a Lasso regression model\n",
+    "lasso_model = Lasso(alpha=1.0)  # You can adjust the alpha parameter for regularization strength\n",
+    "\n",
+    "# Fit the model to the training data\n",
+    "lasso_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "y_pred = lasso_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"Mean Squared Error:\", mse)\n",
+    "print(\"Root Mean Squared Error:\", rmse)\n",
+    "print(\"R-squared:\", r2)\n",
+    "\n",
+    "# You can also check the coefficients of the selected features\n",
+    "coefficients = lasso_model.coef_\n",
+    "intercept = lasso_model.intercept_\n",
+    "print(\"Coefficients:\", coefficients)\n",
+    "print(\"Intercept:\", intercept)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f40e604",
+   "id": "a2fdc79e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## 4"
-   ]
+   "source": []
   }
  ],
  "metadata": {
