--- a/Notebooks/ML_model building.ipynb
+++ b/Notebooks/ML_model building.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fa22308a",
+   "id": "573a0bdd",
    "metadata": {},
    "source": [
     "# 5. Analyze & Share phase\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0a117bfc",
+   "id": "cf737c0e",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67e6fd2d",
+   "id": "a3632662",
    "metadata": {},
    "source": [
     "### 5.1.2 Extra Trees Regressor (feature_importance_)"
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ed7becc",
+   "id": "f8a203a3",
    "metadata": {},
    "source": [
     "**workin with all the numerical values**"
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0395614e",
+   "id": "786ad624",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d6fea635",
+   "id": "cb2bea4d",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0c8c23e7",
+   "id": "803e363b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ab71141b",
+   "id": "132fbff9",
    "metadata": {
     "scrolled": true
    },
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9871b34d",
+   "id": "fccc9e05",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f3bb567",
+   "id": "7b2e7844",
    "metadata": {},
    "source": [
     "### 5.1.3 RFECV\n"
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ec947393",
+   "id": "d7d8f77b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ff6aa6d3",
+   "id": "4929bc69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6c520599",
+   "id": "633018cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "835675a6",
+   "id": "040d874d",
    "metadata": {},
    "source": [
     "## 5.2 Ensembling(Random Forest Regressor)\n"
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "56cd0465",
+   "id": "c2f67ac6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "29905816",
+   "id": "19c0d16a",
    "metadata": {
     "scrolled": true
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40e7e108",
+   "id": "cd73b668",
    "metadata": {},
    "source": [
     "Here, the training score is too high which means **Overfitting**, so we will go with Linear and lasso"
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "27a73dc3",
+   "id": "5632d794",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c47707bc",
+   "id": "1c793bb9",
    "metadata": {},
    "source": [
     "## 4. Linear Regression"
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8866bf54",
+   "id": "1c0dc2f2",
    "metadata": {
     "scrolled": true
    },
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f6938cb",
+   "id": "26c94335",
    "metadata": {},
    "source": [
     "Again, the r-score is bad and wil be underfitting"
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d8e689f",
+   "id": "ce305061",
    "metadata": {},
    "source": [
     "## 5. Lasso Regression "
@@ -839,8 +839,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "f1444ce4",
+   "execution_count": 33,
+   "id": "72ab4824",
    "metadata": {},
    "outputs": [
     {
@@ -849,15 +849,7 @@
      "text": [
       "Mean Squared Error: 60128572.669605605\n",
       "Root Mean Squared Error: 7754.261581195569\n",
-      "R-squared: -2.0653825945543285\n",
-      "Coefficients: [-8.07895425e+02  4.19822975e+03 -2.23517708e+00  3.33366991e+02\n",
-      "  1.00097601e+01  1.35572532e+03 -3.08842177e+03  5.28658272e+02\n",
-      "  1.26981566e+03  5.17608451e+03 -2.34719619e+04  1.23378956e+02\n",
-      " -2.11190662e+02 -1.51909676e+02  1.43066878e+03  1.59582578e+02\n",
-      " -1.09651827e+00 -3.40166847e-01  2.15180650e+00  5.19050116e-04\n",
-      "  1.30385841e+04 -4.89175072e+03 -8.47771512e+04  0.00000000e+00\n",
-      "  0.00000000e+00  4.05817557e+03]\n",
-      "Intercept: -6810.8342304389125\n"
+      "R-squared: -2.0653825945543285\n"
      ]
     }
    ],
@@ -867,20 +859,13 @@
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import numpy as np\n",
     "\n",
-    "# Assuming you have your features in X and target variable in y\n",
-    "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Create a Lasso regression model\n",
-    "lasso_model = Lasso(alpha=1.0)  # You can adjust the alpha parameter for regularization strength\n",
+    "lasso_model = Lasso(alpha=1.0)  \n",
     "\n",
-    "# Fit the model to the training data\n",
     "lasso_model.fit(X_train, y_train)\n",
-    "\n",
-    "# Make predictions on the test data\n",
     "y_pred = lasso_model.predict(X_test)\n",
     "\n",
-    "# Evaluate the model\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
     "rmse = np.sqrt(mse)\n",
     "r2 = r2_score(y_test, y_pred)\n",
@@ -889,17 +874,21 @@
     "print(\"Root Mean Squared Error:\", rmse)\n",
     "print(\"R-squared:\", r2)\n",
     "\n",
-    "# You can also check the coefficients of the selected features\n",
-    "coefficients = lasso_model.coef_\n",
-    "intercept = lasso_model.intercept_\n",
-    "print(\"Coefficients:\", coefficients)\n",
-    "print(\"Intercept:\", intercept)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2fdc79e",
+   "id": "cac8b642",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac5887e4",
    "metadata": {},
    "outputs": [],
    "source": []
