--- a/Notebooks/ML_model building.ipynb
+++ b/Notebooks/ML_model building.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "573a0bdd",
+   "id": "98863906",
    "metadata": {},
    "source": [
     "# 5. Analyze & Share phase\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cf737c0e",
+   "id": "f5ef7b0a",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3632662",
+   "id": "e0ee873c",
    "metadata": {},
    "source": [
     "### 5.1.2 Extra Trees Regressor (feature_importance_)"
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8a203a3",
+   "id": "ca71f813",
    "metadata": {},
    "source": [
     "**workin with all the numerical values**"
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "786ad624",
+   "id": "1c38fd93",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cb2bea4d",
+   "id": "53ae2455",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "803e363b",
+   "id": "896d3354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "132fbff9",
+   "id": "9d5e245c",
    "metadata": {
     "scrolled": true
    },
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fccc9e05",
+   "id": "68e941f0",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b2e7844",
+   "id": "3bd2f9d8",
    "metadata": {},
    "source": [
     "### 5.1.3 RFECV\n"
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d7d8f77b",
+   "id": "f21a9222",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4929bc69",
+   "id": "10bed5ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "633018cb",
+   "id": "d1342cdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "040d874d",
+   "id": "d46b83c0",
    "metadata": {},
    "source": [
     "## 5.2 Ensembling(Random Forest Regressor)\n"
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c2f67ac6",
+   "id": "c8fe542b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "19c0d16a",
+   "id": "8d92bef2",
    "metadata": {
     "scrolled": true
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd73b668",
+   "id": "e8d72759",
    "metadata": {},
    "source": [
     "Here, the training score is too high which means **Overfitting**, so we will go with Linear and lasso"
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5632d794",
+   "id": "c1d9334e",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c793bb9",
+   "id": "bdaf1f99",
    "metadata": {},
    "source": [
     "## 4. Linear Regression"
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1c0dc2f2",
+   "id": "d6d70c43",
    "metadata": {
     "scrolled": true
    },
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26c94335",
+   "id": "5cbeb28b",
    "metadata": {},
    "source": [
     "Again, the r-score is bad and wil be underfitting"
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce305061",
+   "id": "41e17e10",
    "metadata": {},
    "source": [
     "## 5. Lasso Regression "
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "72ab4824",
+   "id": "ba763cb2",
    "metadata": {},
    "outputs": [
     {
@@ -878,17 +878,154 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0337526",
+   "metadata": {},
+   "source": [
+    "## hyperparameter tuning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cac8b642",
+   "execution_count": 34,
+   "id": "31e4a5ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 7 candidates, totalling 35 fits\n",
+      "[CV] END bootstrap=True, max_depth=4, max_features=auto, min_samples_leaf=8, min_samples_split=6, n_estimators=70; total time=   0.1s\n",
+      "[CV] END bootstrap=True, max_depth=4, max_features=auto, min_samples_leaf=8, min_samples_split=6, n_estimators=70; total time=   0.1s\n",
+      "[CV] END bootstrap=True, max_depth=4, max_features=auto, min_samples_leaf=8, min_samples_split=6, n_estimators=70; total time=   0.1s\n",
+      "[CV] END bootstrap=True, max_depth=4, max_features=auto, min_samples_leaf=8, min_samples_split=6, n_estimators=70; total time=   0.1s\n",
+      "[CV] END bootstrap=True, max_depth=4, max_features=auto, min_samples_leaf=8, min_samples_split=6, n_estimators=70; total time=   0.1s\n",
+      "[CV] END bootstrap=False, max_depth=3, max_features=auto, min_samples_leaf=8, min_samples_split=6, n_estimators=40; total time=   0.0s\n",
+      "[CV] END bootstrap=False, max_depth=3, max_features=auto, min_samples_leaf=8, min_samples_split=6, n_estimators=40; total time=   0.0s\n",
+      "[CV] END bootstrap=False, max_depth=3, max_features=auto, min_samples_leaf=8, min_samples_split=6, n_estimators=40; total time=   0.0s\n",
+      "[CV] END bootstrap=False, max_depth=3, max_features=auto, min_samples_leaf=8, min_samples_split=6, n_estimators=40; total time=   0.0s\n",
+      "[CV] END bootstrap=False, max_depth=3, max_features=auto, min_samples_leaf=8, min_samples_split=6, n_estimators=40; total time=   0.0s\n",
+      "[CV] END bootstrap=False, max_depth=8, max_features=auto, min_samples_leaf=6, min_samples_split=6, n_estimators=20; total time=   0.0s\n",
+      "[CV] END bootstrap=False, max_depth=8, max_features=auto, min_samples_leaf=6, min_samples_split=6, n_estimators=20; total time=   0.0s\n",
+      "[CV] END bootstrap=False, max_depth=8, max_features=auto, min_samples_leaf=6, min_samples_split=6, n_estimators=20; total time=   0.0s\n",
+      "[CV] END bootstrap=False, max_depth=8, max_features=auto, min_samples_leaf=6, min_samples_split=6, n_estimators=20; total time=   0.0s\n",
+      "[CV] END bootstrap=False, max_depth=8, max_features=auto, min_samples_leaf=6, min_samples_split=6, n_estimators=20; total time=   0.0s\n",
+      "[CV] END bootstrap=False, max_depth=6, max_features=sqrt, min_samples_leaf=5, min_samples_split=2, n_estimators=100; total time=   0.3s\n",
+      "[CV] END bootstrap=False, max_depth=6, max_features=sqrt, min_samples_leaf=5, min_samples_split=2, n_estimators=100; total time=   0.3s\n",
+      "[CV] END bootstrap=False, max_depth=6, max_features=sqrt, min_samples_leaf=5, min_samples_split=2, n_estimators=100; total time=   0.3s\n",
+      "[CV] END bootstrap=False, max_depth=6, max_features=sqrt, min_samples_leaf=5, min_samples_split=2, n_estimators=100; total time=   0.2s\n",
+      "[CV] END bootstrap=False, max_depth=6, max_features=sqrt, min_samples_leaf=5, min_samples_split=2, n_estimators=100; total time=   0.3s\n",
+      "[CV] END bootstrap=False, max_depth=9, max_features=auto, min_samples_leaf=10, min_samples_split=4, n_estimators=70; total time=   0.2s\n",
+      "[CV] END bootstrap=False, max_depth=9, max_features=auto, min_samples_leaf=10, min_samples_split=4, n_estimators=70; total time=   0.2s\n",
+      "[CV] END bootstrap=False, max_depth=9, max_features=auto, min_samples_leaf=10, min_samples_split=4, n_estimators=70; total time=   0.2s\n",
+      "[CV] END bootstrap=False, max_depth=9, max_features=auto, min_samples_leaf=10, min_samples_split=4, n_estimators=70; total time=   0.2s\n",
+      "[CV] END bootstrap=False, max_depth=9, max_features=auto, min_samples_leaf=10, min_samples_split=4, n_estimators=70; total time=   0.2s\n",
+      "[CV] END bootstrap=False, max_depth=9, max_features=auto, min_samples_leaf=5, min_samples_split=4, n_estimators=70; total time=   0.2s\n",
+      "[CV] END bootstrap=False, max_depth=9, max_features=auto, min_samples_leaf=5, min_samples_split=4, n_estimators=70; total time=   0.2s\n",
+      "[CV] END bootstrap=False, max_depth=9, max_features=auto, min_samples_leaf=5, min_samples_split=4, n_estimators=70; total time=   0.2s\n",
+      "[CV] END bootstrap=False, max_depth=9, max_features=auto, min_samples_leaf=5, min_samples_split=4, n_estimators=70; total time=   0.2s\n",
+      "[CV] END bootstrap=False, max_depth=9, max_features=auto, min_samples_leaf=5, min_samples_split=4, n_estimators=70; total time=   0.2s\n",
+      "[CV] END bootstrap=True, max_depth=9, max_features=auto, min_samples_leaf=2, min_samples_split=5, n_estimators=90; total time=   0.3s\n",
+      "[CV] END bootstrap=True, max_depth=9, max_features=auto, min_samples_leaf=2, min_samples_split=5, n_estimators=90; total time=   0.3s\n",
+      "[CV] END bootstrap=True, max_depth=9, max_features=auto, min_samples_leaf=2, min_samples_split=5, n_estimators=90; total time=   0.3s\n",
+      "[CV] END bootstrap=True, max_depth=9, max_features=auto, min_samples_leaf=2, min_samples_split=5, n_estimators=90; total time=   0.3s\n",
+      "[CV] END bootstrap=True, max_depth=9, max_features=auto, min_samples_leaf=2, min_samples_split=5, n_estimators=90; total time=   0.3s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5, estimator=RandomForestClassifier(), n_iter=7,\n",
+       "                   param_distributions={'bootstrap': [True, False],\n",
+       "                                        'max_depth': <scipy.stats._distn_infrastructure.rv_discrete_frozen object at 0x000001EE43612DF0>,\n",
+       "                                        'max_features': ['auto', 'sqrt'],\n",
+       "                                        'min_samples_leaf': <scipy.stats._distn_infrastructure.rv_discrete_frozen object at 0x000001EE1DB1B760>,\n",
+       "                                        'min_samples_split': <scipy.stats._distn_infrastructure.rv_discrete_frozen object at 0x000001EE4363E520>,\n",
+       "                                        'n_estimators': array([ 10,  20,  30,  40,  50,  60,  70,  80,  90, 100])},\n",
+       "                   random_state=42, scoring='neg_mean_squared_error',\n",
+       "                   verbose=2)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy.stats import randint\n",
+    "\n",
+    "#assigning the ensemble learning model\n",
+    "rf_classifier = RandomForestClassifier()\n",
+    "\n",
+    "#generating the parameter distributions\n",
+    "# Define hyperparameter space for RandomizedSearchCV\n",
+    "\n",
+    "param_dist = {\n",
+    "    'n_estimators': np.linspace(10, 100, num=10, dtype='int'),\n",
+    "    'max_depth': randint(1, 10),\n",
+    "    'max_features': ['auto', 'sqrt'],  # Added a comma here cz of dictionary\n",
+    "    'min_samples_split': randint(2, 11),\n",
+    "    'min_samples_leaf': randint(1, 11),\n",
+    "    'bootstrap': [True, False]\n",
+    "}\n",
+    "\n",
+    "# Create RandomizedSearchCV object\n",
+    "\n",
+    "rf_comb = RandomizedSearchCV(\n",
+    "    estimator=rf_classifier, \n",
+    "    param_distributions=param_dist, \n",
+    "    scoring='neg_mean_squared_error', \n",
+    "    verbose=2, \n",
+    "    cv=5, \n",
+    "    random_state=42,\n",
+    "    n_iter = 7\n",
+    ")\n",
+    "# Fit the RandomizedSearchCV object to the data\n",
+    "rf_comb.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2f097509",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best HyperParameters are: {'bootstrap': False, 'max_depth': 9, 'max_features': 'auto', 'min_samples_leaf': 5, 'min_samples_split': 4, 'n_estimators': 70}\n",
+      "\n",
+      "Best Score: -644539270.33875\n"
+     ]
+    }
+   ],
+   "source": [
+    "#printing our best parameter\n",
+    "print(f'Best HyperParameters are: {rf_comb.best_params_}\\n')\n",
+    "print(\"Best Score:\", rf_comb.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "155ea4c4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#predicting and using it for later purposes\n",
+    "rsc_pred = rf_comb.predict(X_test)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac5887e4",
+   "id": "4b8b739a",
    "metadata": {},
    "outputs": [],
    "source": []
