--- a/Notebooks/ML_model building.ipynb
+++ b/Notebooks/ML_model building.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0f665878",
+   "id": "263db9de",
    "metadata": {},
    "source": [
     "# 5. Analyze & Share phase\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0aeceac3",
+   "id": "26f2dd20",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b9b9494",
+   "id": "3f4da5d2",
    "metadata": {},
    "source": [
     "### 5.1.2 Extra Trees Regressor (feature_importance_)"
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7c8b384",
+   "id": "0153dbc9",
    "metadata": {},
    "source": [
     "**workin with all the numerical values**"
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c7c24c28",
+   "id": "a48e9d17",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3f2c2f1a",
+   "id": "706c6b14",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1118a635",
+   "id": "a551e351",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "711f28c1",
+   "id": "30eed402",
    "metadata": {
     "scrolled": true
    },
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "71d444fe",
+   "id": "4da77574",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2c8ef5e",
+   "id": "55b1947b",
    "metadata": {},
    "source": [
     "### 5.1.3 RFECV\n"
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a394b674",
+   "id": "a325f7b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "298e9576",
+   "id": "c674e35d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "153ba8f6",
+   "id": "682f6ac6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b37aac8",
+   "id": "a059777c",
    "metadata": {},
    "source": [
     "## 5.2 Ensembling(Random Forest Regressor)\n"
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4acd5fd0",
+   "id": "f2b78338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fcc57813",
+   "id": "172a89ef",
    "metadata": {
     "scrolled": true
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "254063bf",
+   "id": "a152b1d5",
    "metadata": {},
    "source": [
     "Here, the training score is too high which means **Overfitting**, so we will go with Linear and lasso"
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5100e3cc",
+   "id": "89023db0",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1d856e2",
+   "id": "5110fbb1",
    "metadata": {},
    "source": [
     "## 4. Linear Regression"
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "aad28f30",
+   "id": "d0773ff5",
    "metadata": {
     "scrolled": true
    },
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c009e62",
+   "id": "cf0af52e",
    "metadata": {},
    "source": [
     "Again, the r-score is bad and wil be underfitting"
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03e45f4d",
+   "id": "3f4442fb",
    "metadata": {},
    "source": [
     "## 5. Lasso Regression "
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4de673b5",
+   "id": "d2bc644c",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d0b05cb",
+   "id": "e9365e6b",
    "metadata": {},
    "source": [
     "## hyperparameter tuning"
@@ -888,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "20f9d849",
+   "id": "3ff5c7c5",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "614e578b",
+   "id": "eb0b6f87",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "b525ff83",
+   "id": "c331a64d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4e0d38c8",
+   "id": "43cf5ac5",
    "metadata": {},
    "outputs": [
     {
@@ -1048,23 +1048,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "35502175",
+   "execution_count": 40,
+   "id": "68d18cf2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (639653046.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [39]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, rsc_pred)))\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 2123.82\n",
+      "R2: -0.15324601462000742\n",
+      "MSE: 22621331.81\n",
+      "RMSE: 4756.188790407715\n"
      ]
     }
    ],
    "source": [
     "from sklearn import metrics\n",
     "print('MAE:', metrics.mean_absolute_error(y_test, rsc_pred))\n",
-    "print('R2:', np.sqrt(metrics.r2_score(y_test, rsc_pred))\n",
+    "print('R2:', metrics.r2_score(y_test, rsc_pred))\n",
     "print('MSE:', metrics.mean_squared_error(y_test, rsc_pred))\n",
     "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, rsc_pred)))"
    ]
@@ -1072,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b9f0d92",
+   "id": "fdbb1009",
    "metadata": {},
    "outputs": [],
    "source": []
