--- a/Notebooks/ML_model building.ipynb
+++ b/Notebooks/ML_model building.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "eb0ef742",
+   "metadata": {},
+   "source": [
+    ". Loading the Data:\n",
+    "\n",
+    "II. Helper function to calculate prediction interval:\n",
+    "\n",
+    "III. Models:\n",
+    "\n",
+    "Linear Regression:\n",
+    "\n",
+    "Ridge Regression:\n",
+    "\n",
+    "Lasso Regression:\n",
+    "\n",
+    "Ensemble:\n",
+    "\n",
+    "IV. Saving the final trained model:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "263db9de",
    "metadata": {},
    "source": [
