--- a/Notebooks/Feature Engineering.ipynb
+++ b/Notebooks/Feature Engineering.ipynb
@@ -2013,7 +2013,7 @@
    "id": "83b3c037",
    "metadata": {},
    "source": [
-    "## 3.4 Ngrams of title"
+    "## 3.4 Ngrams of title & text"
    ]
   },
   {
@@ -2043,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "008608cc",
+   "id": "0fc5be04",
    "metadata": {
     "scrolled": false
    },
@@ -2161,7 +2161,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2f8b394a",
+   "id": "762478c6",
    "metadata": {},
    "outputs": [
     {
@@ -2276,7 +2276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08ec4e23",
+   "id": "ad3f95fe",
    "metadata": {},
    "source": [
     "### 3.4.1 Concatenating them into the original dataframe"
@@ -2285,7 +2285,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a0c181b3",
+   "id": "360781f3",
    "metadata": {},
    "outputs": [
     {
@@ -2461,7 +2461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "537632ee",
+   "id": "e0255e63",
    "metadata": {},
    "source": [
     "checking null in case"
@@ -2470,7 +2470,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "34352327",
+   "id": "99581a6e",
    "metadata": {},
    "outputs": [
     {
@@ -2545,7 +2545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "940f94bd",
+   "id": "a22a2eda",
    "metadata": {},
    "source": [
     "## 3.5 Saving the final model ready data:"
@@ -2554,7 +2554,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8bc94ec9",
+   "id": "1f56a82e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2564,7 +2564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4f6b11b",
+   "id": "a23f957e",
    "metadata": {},
    "outputs": [],
    "source": []
