--- a/Notebooks/ML_model building.ipynb
+++ b/Notebooks/ML_model building.ipynb
@@ -14,7 +14,10 @@
     "2. Extra Trees Regressor\n",
     "3. RFECV\n",
     "4. Linear Regression\n",
-    "5. Lasso (L1 reg)"
+    "5. Lasso (L1 reg)\n",
+    "6. Ridge\n",
+    "7. Ensemble \n",
+    "8. hyperparameter tuning\n"
    ]
   },
   {
@@ -542,7 +545,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "ab513625",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -573,6 +578,85 @@
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "902d3859",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 999 entries, 0 to 998\n",
+      "Data columns (total 55 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   cleaned_title               999 non-null    object \n",
+      " 1   cleaned_text                999 non-null    object \n",
+      " 2   weekday                     999 non-null    object \n",
+      " 3   is_weekend                  999 non-null    int64  \n",
+      " 4   month                       999 non-null    object \n",
+      " 5   cleaned_data_channel        999 non-null    object \n",
+      " 6   Channel_Entertainment       999 non-null    int64  \n",
+      " 7   Channel_Lifestyle           999 non-null    int64  \n",
+      " 8   Channel_Others              999 non-null    int64  \n",
+      " 9   Channel_Social Media        999 non-null    int64  \n",
+      " 10  Channel_Tech                999 non-null    int64  \n",
+      " 11  unique_tokens_rate          999 non-null    float64\n",
+      " 12  num_hrefs                   999 non-null    int64  \n",
+      " 13  num_imgs                    999 non-null    int64  \n",
+      " 14  num_videos                  999 non-null    float64\n",
+      " 15  average_token_length        999 non-null    float64\n",
+      " 16  num_keywords                999 non-null    int64  \n",
+      " 17  min_avg_key                 999 non-null    float64\n",
+      " 18  max_avg_key                 999 non-null    float64\n",
+      " 19  avg_avg_key                 999 non-null    float64\n",
+      " 20  href_avg_shares             999 non-null    float64\n",
+      " 21  global_subjectivity         999 non-null    float64\n",
+      " 22  global_sentiment_polarity   999 non-null    float64\n",
+      " 23  global_rate_positive_words  999 non-null    float64\n",
+      " 24  global_rate_negative_words  999 non-null    float64\n",
+      " 25  title_subjectivity          999 non-null    float64\n",
+      " 26  title_sentiment_polarity    999 non-null    float64\n",
+      " 27  shares                      999 non-null    int64  \n",
+      " 28  month no                    999 non-null    int64  \n",
+      " 29  weekday no                  999 non-null    int64  \n",
+      " 30  avg shares daily            999 non-null    float64\n",
+      " 31  avg shares weekly           999 non-null    float64\n",
+      " 32  avg shares by channel       999 non-null    float64\n",
+      " 33  title_tokens                999 non-null    int64  \n",
+      " 34  text_tokens                 999 non-null    int64  \n",
+      " 35  noun_count_title            999 non-null    int64  \n",
+      " 36  verb_count_title            999 non-null    int64  \n",
+      " 37  adjective_count_title       999 non-null    int64  \n",
+      " 38  noun_count_text             999 non-null    int64  \n",
+      " 39  verb_count_text             999 non-null    int64  \n",
+      " 40  adjective_count_text        999 non-null    int64  \n",
+      " 41  amazon fire                 999 non-null    int64  \n",
+      " 42  april fools                 999 non-null    int64  \n",
+      " 43  fire tv                     999 non-null    int64  \n",
+      " 44  game thrones                999 non-null    int64  \n",
+      " 45  google glass                999 non-null    int64  \n",
+      " 46  need know                   999 non-null    int64  \n",
+      " 47  report says                 999 non-null    int64  \n",
+      " 48  2014opens new               999 non-null    int64  \n",
+      " 49  april 2014opens             999 non-null    int64  \n",
+      " 50  fire tv.1                   999 non-null    int64  \n",
+      " 51  new window                  999 non-null    int64  \n",
+      " 52  new york                    999 non-null    int64  \n",
+      " 53  see also                    999 non-null    int64  \n",
+      " 54  social media                999 non-null    int64  \n",
+      "dtypes: float64(16), int64(34), object(5)\n",
+      "memory usage: 429.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
@@ -1935,7 +2019,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "f97f36a2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1959,6 +2045,54 @@
     "plt.title('Correlation Matrix')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3c25084c",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "avg_avg_key                   0.190891\n",
+      "href_avg_shares               0.180088\n",
+      "max_avg_key                   0.175701\n",
+      "avg shares by channel         0.144123\n",
+      "avg shares daily              0.142761\n",
+      "global_subjectivity           0.105557\n",
+      "num_keywords                  0.102101\n",
+      "global_rate_positive_words    0.099742\n",
+      "Channel_Social Media          0.098513\n",
+      "num_hrefs                     0.091711\n",
+      "Channel_Tech                  0.084343\n",
+      "num_imgs                      0.075050\n",
+      "new window                    0.066507\n",
+      "is_weekend                    0.064349\n",
+      "verb_count_text               0.063733\n",
+      "global_sentiment_polarity     0.055804\n",
+      "text_tokens                   0.054196\n",
+      "adjective_count_text          0.051020\n",
+      "noun_count_text               0.050920\n",
+      "num_videos                    0.038335\n",
+      "verb_count_title              0.032987\n",
+      "title_sentiment_polarity      0.031976\n",
+      "title_subjectivity            0.021661\n",
+      "month no                      0.013398\n",
+      "Name: shares, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "corr_with_target = correlation_matrix['shares'].sort_values(ascending=False)\n",
+    "\n",
+    "top_correlated_features = corr_with_target[1:25]  \n",
+    "print(top_correlated_features)\n"
    ]
   },
   {
