--- a/Notebooks/ML_model_building.ipynb
+++ b/Notebooks/ML_model_building.ipynb
@@ -4103,7 +4103,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "fee90011",
+   "id": "f8279537",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4113,7 +4113,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "08e15c7e",
+   "id": "d3889d05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5199,7 +5199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e1eb1c6",
+   "id": "dd979b6e",
    "metadata": {},
    "source": [
     "`Looks good now`"
@@ -5271,7 +5271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "984ad765",
+   "id": "d9a20810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5279,16 +5279,44 @@
     "\n",
     "import pickle\n",
     "\n",
-    "with open('new_news_share.pkl', 'wb') as file:\n",
-    "    pickle.dump(rf_regressor, file)\n",
-    "\n",
-    "model77= open('new_news_share.pkl', 'rb')\n",
+    "with open('model/new_news_share.pkl', 'wb') as file:\n",
+    "    pickle.dump(rf_regressor, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5c1e7e21",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'model/new_news_share.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model77\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmodel/new_news_share.pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m newsgive \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(model77)\n\u001b[0;32m      4\u001b[0m predictedmodel \u001b[38;5;241m=\u001b[39m newsgive\u001b[38;5;241m.\u001b[39mpredict(J_test)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'model/new_news_share.pkl'"
+     ]
+    }
+   ],
+   "source": [
+    "model77= open('model/new_news_share.pkl', 'rb')\n",
     "newsgive = pickle.load(model77)\n",
     "\n",
     "predictedmodel = newsgive.predict(J_test)\n",
     "\n",
     "metrics.r2_score(k_test, predictedmodel)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19597e06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
